# nnfs

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.md  modules.md
notebooks/: nnfs1.ipynb  targets.py  targets.yaml
src/nnfs/: __init__.py
src/notebooks/: nnfs1.ipynb
tests/: test_foo.py
