[project]
name = "nnfs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alb202", email = "ablumenf@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.1",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
]

[project.scripts]
nnfs = "nnfs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
